change env key name

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,7 @@ JWT_ACCESS_SECRET=
 JWT_REFRESH_SECRET=
 PORT=
 HOST=
-DATABASE_CONNECTION_STRING=
-REDIS_CONNECTION_STRING=
-REDIS_PASSWORD=
+DATABASE_URL=
 REDIS_HOST=
 REDIS_PORT=
 ENV=
