--- a/package.json
+++ b/package.json
@@ -69,20 +69,27 @@
     "typescript": "^5.1.3"
   },
   "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFiles": ["<rootDir>/test/setup-env.js"],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1",
+      "^@infras/(.*)$": "<rootDir>/src/infrastructure/$1",
+      "^@auth/(.*)$": "<rootDir>/src/auth/$1",
+      "^@user/(.*)$": "<rootDir>/src/user/$1",
+      "^@company/(.*)$": "<rootDir>/src/company/$1",
+      "^@test/(.*)$": "<rootDir>/test/$1"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@nestjs|@nestjs/(passport|swagger|mapped-types))"
     ],
-    "rootDir": "src",
+    "moduleFileExtensions": ["js", "json", "ts"],
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+      "^.+\\.(t|j)s$": ["ts-jest", {
+        "tsconfig": "test/tsconfig.json"
+      }]
+    }
   }
 }
